--- a/index.html
+++ b/index.html
@@ -157,7 +157,12 @@
   </header>
 
   <main>
-    <h2>مرحبًا</h2>
+    
+    <div style="text-align: center;">
+      <img src="assets/img/doctor-illustration.png" alt="Doctor Illustration" style="max-width: 250px; margin-top: 20px; border-radius: 12px;">
+    </div>
+
+<h2>مرحبًا</h2>
     <p>This app is a fast access for pediatric emergency doctors.</p>
     <h3 style="text-align: center; direction: rtl;">اختر أحد الأقسام للبدء:</h3>
 
