--- a/calculators.html
+++ b/calculators.html
@@ -1,80 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8">
-  <title>Paediatric Emergency Tools</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@500;700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <title>Fluid Calculator</title>
   <style>
     body {
-      font-family: 'Cairo', sans-serif;
-      background-color: #1c1c1c;
-      color: #eee;
+      background-color: #111;
+      color: #fff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
+      text-align: center;
     }
     header {
-      background-color: #111;
-      padding: 25px 0;
-      text-align: center;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.5);
+      background-color: #000;
+      padding: 20px;
+      border-bottom: 1px solid #444;
     }
     header h1 {
+      color: #d4af37;
       margin: 0;
-      font-size: 28px;
-      color: #d4af37;
-    }
-    nav {
-      margin-top: 10px;
-    }
-    nav a {
-      color: #eee;
-      text-decoration: none;
-      margin: 0 15px;
-      font-size: 18px;
-      padding: 6px 12px;
-      transition: color 0.3s ease;
-    }
-    nav a:hover {
-      color: #d4af37;
     }
     main {
-      padding: 60px 20px;
-      text-align: center;
+      padding: 40px 20px;
     }
-    main h2 {
-      font-size: 30px;
-      color: #d4af37;
-    }
-    main p, h3 {
-      font-size: 20px;
-      margin-top: 20px;
-    }
-    .icon-nav {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-top: 40px;
-    }
-    .icon-link {
-      background-color: #2a2a2a;
-      color: #eee;
-      text-decoration: none;
-      border-radius: 12px;
+    input {
+      padding: 10px;
+      font-size: 18px;
+      border-radius: 8px;
+      border: none;
       width: 200px;
+      background-color: #222;
+      color: #fff;
+    }
+    button {
+      background-color: #d4af37;
+      color: #000;
+      padding: 10px 20px;
+      margin-top: 10px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 18px;
+    }
+    .result-box {
+      margin-top: 30px;
+      background-color: #f9f9f9;
+      border: 1px solid #444;
+      border-radius: 12px;
       padding: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
-      transition: transform 0.3s;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
     }
-    .icon-link:hover {
-      transform: translateY(-6px);
-      color: #d4af37;
-    }
-    .icon-link i {
-      font-size: 32px;
-      margin-bottom: 10px;
-      color: #d4af37;
+    p {
+      font-size: 18px;
+      line-height: 1.6;
     }
   </style>
 </head>
@@ -99,26 +80,57 @@ header {
 </style>
 
   <header>
-    <h1>Paediatric Emergency Tools</h1>
-    <nav>
-      <a href="index.html">الرئيسية</a>
-      <a href="about.html">حول التطبيق</a>
-    </nav>
+    <h1>💧 Fluid Calculator</h1>
   </header>
-
   <main>
-    <h2>مرحبًا</h2>
-    <p>This app is a fast access for pediatric emergency doctors.</p>
-    <h3 style="text-align: center; direction: rtl;">اختر أحد الأقسام للبدء:</h3>
+    <p>Enter patient weight (kg):</p>
+    <input type="number" id="weight" placeholder="e.g. 20" step="0.1">
+    <br>
+    <button onclick="calculateFluids()">Calculate</button>
 
-    <div class="icon-nav">
-      <a class="icon-link" href="calculators.html"><i class="fas fa-calculator"></i><br>💧 Fluid Calculator</a>
-      <a class="icon-link" href="drugs.html"><i class="fas fa-pills"></i><br>💊 Emergency Drugs</a>
-      <a class="icon-link" href="algorithms.html"><i class="fas fa-project-diagram"></i><br>📊 Algorithms</a>
-      <a class="icon-link" href="critical.html"><i class="fas fa-heartbeat"></i><br>🚨 Critical Cases</a>
-      <a class="icon-link" href="gcs.html"><i class="fas fa-brain"></i><br>🧠 GCS</a>
+    <div class="result-box" id="results" style="display:none;">
+      <h2>Results</h2>
+      <p id="maintenance"></p>
+      <p id="bolus"></p>
+      <p id="deficit5"></p>
+      <p id="deficit7"></p>
+      <p id="deficit10"></p>
     </div>
   </main>
+
+  <script>
+    function calculateFluids() {
+      const weightInput = document.getElementById('weight').value;
+      const weight = parseFloat(weightInput);
+      if (!weight || weight <= 0) {
+        alert("Please enter a valid weight.");
+        return;
+      }
+
+      let maintenance = 0;
+      if (weight <= 10) {
+        maintenance = weight * 100;
+      } else if (weight <= 20) {
+        maintenance = 1000 + (weight - 10) * 50;
+      } else {
+        maintenance = 1500 + (weight - 20) * 20;
+      }
+      const maintenanceHr = (maintenance / 24).toFixed(1);
+
+      const bolus = (weight * 20).toFixed(1);
+      const deficit5 = ((weight * 0.05 * 1000) / 24).toFixed(1);
+      const deficit7 = ((weight * 0.07 * 1000) / 24).toFixed(1);
+      const deficit10 = ((weight * 0.10 * 1000) / 24).toFixed(1);
+
+      document.getElementById('maintenance').innerText = `Maintenance: ${maintenance.toFixed(1)} ml/day (${maintenanceHr} ml/hr)`;
+      document.getElementById('bolus').innerText = `Bolus (20 ml/kg): ${bolus} ml`;
+      document.getElementById('deficit5').innerText = `Deficit 5%: ${deficit5} ml/hr`;
+      document.getElementById('deficit7').innerText = `Deficit 7%: ${deficit7} ml/hr`;
+      document.getElementById('deficit10').innerText = `Deficit 10%: ${deficit10} ml/hr`;
+
+      document.getElementById('results').style.display = 'block';
+    }
+  </script>
 
 
 <style>
