--- a/critical.html
+++ b/critical.html
@@ -1,82 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Paediatric Emergency Tools</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@500;700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-  <style>
-    body {
-      font-family: 'Cairo', sans-serif;
-      background-color: #1c1c1c;
-      color: #eee;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background-color: #111;
-      padding: 25px 0;
-      text-align: center;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.5);
-    }
-    header h1 {
-      margin: 0;
-      font-size: 28px;
-      color: #d4af37;
-    }
-    nav {
-      margin-top: 10px;
-    }
-    nav a {
-      color: #eee;
-      text-decoration: none;
-      margin: 0 15px;
-      font-size: 18px;
-      padding: 6px 12px;
-      transition: color 0.3s ease;
-    }
-    nav a:hover {
-      color: #d4af37;
-    }
-    main {
-      padding: 60px 20px;
-      text-align: center;
-    }
-    main h2 {
-      font-size: 30px;
-      color: #d4af37;
-    }
-    main p, h3 {
-      font-size: 20px;
-      margin-top: 20px;
-    }
-    .icon-nav {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-top: 40px;
-    }
-    .icon-link {
-      background-color: #2a2a2a;
-      color: #eee;
-      text-decoration: none;
-      border-radius: 12px;
-      width: 200px;
-      padding: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
-      transition: transform 0.3s;
-    }
-    .icon-link:hover {
-      transform: translateY(-6px);
-      color: #d4af37;
-    }
-    .icon-link i {
-      font-size: 32px;
-      margin-bottom: 10px;
-      color: #d4af37;
-    }
-  </style>
+<meta charset="UTF-8">
+<title>Critical Cases – Coming Soon</title>
+<style>
+body {
+  background-color: #f4f4f4;
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-align: center;
+}
+.container {
+  background: white;
+  padding: 40px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.15);
+  max-width: 600px;
+}
+h1 {
+  font-size: 32px;
+  color: #333;
+}
+p {
+  font-size: 18px;
+  color: #666;
+  margin-top: 10px;
+}
+</style>
 </head>
 
 <body style="font-family: 'Segoe UI', sans-serif; background-color: #f8fbff; color: #222;">
@@ -98,27 +51,12 @@ header {
 }
 </style>
 
-  <header>
-    <h1>Paediatric Emergency Tools</h1>
-    <nav>
-      <a href="index.html">الرئيسية</a>
-      <a href="about.html">حول التطبيق</a>
-    </nav>
-  </header>
-
-  <main>
-    <h2>مرحبًا</h2>
-    <p>This app is a fast access for pediatric emergency doctors.</p>
-    <h3 style="text-align: center; direction: rtl;">اختر أحد الأقسام للبدء:</h3>
-
-    <div class="icon-nav">
-      <a class="icon-link" href="calculators.html"><i class="fas fa-calculator"></i><br>💧 Fluid Calculator</a>
-      <a class="icon-link" href="drugs.html"><i class="fas fa-pills"></i><br>💊 Emergency Drugs</a>
-      <a class="icon-link" href="algorithms.html"><i class="fas fa-project-diagram"></i><br>📊 Algorithms</a>
-      <a class="icon-link" href="critical.html"><i class="fas fa-heartbeat"></i><br>🚨 Critical Cases</a>
-      <a class="icon-link" href="gcs.html"><i class="fas fa-brain"></i><br>🧠 GCS</a>
-    </div>
-  </main>
+<div class="container">
+  <h1>🚧 Coming Soon – Stay Tuned!</h1>
+  <p>This section is under development.</p>
+  <p>Powerful and practical emergency resources are on the way to support your clinical decisions.</p>
+  <p><strong>ترقبوا بإذن الله ⏳🚀</strong></p>
+</div>
 
 
 <style>
