--- a/gcs.html
+++ b/gcs.html
@@ -1,80 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>Paediatric Emergency Tools</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@500;700&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <title>مقياس غلاسكو للغيبوبة - GCS</title>
   <style>
     body {
-      font-family: 'Cairo', sans-serif;
-      background-color: #1c1c1c;
-      color: #eee;
+      background-color: #111;
+      color: #fff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
+      text-align: center;
     }
     header {
-      background-color: #111;
-      padding: 25px 0;
-      text-align: center;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.5);
+      background-color: #000;
+      padding: 20px;
+      border-bottom: 1px solid #444;
     }
     header h1 {
+      color: #d4af37;
       margin: 0;
-      font-size: 28px;
-      color: #d4af37;
-    }
-    nav {
-      margin-top: 10px;
-    }
-    nav a {
-      color: #eee;
-      text-decoration: none;
-      margin: 0 15px;
-      font-size: 18px;
-      padding: 6px 12px;
-      transition: color 0.3s ease;
-    }
-    nav a:hover {
-      color: #d4af37;
     }
     main {
-      padding: 60px 20px;
-      text-align: center;
-    }
-    main h2 {
-      font-size: 30px;
-      color: #d4af37;
-    }
-    main p, h3 {
-      font-size: 20px;
-      margin-top: 20px;
-    }
-    .icon-nav {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-top: 40px;
-    }
-    .icon-link {
-      background-color: #2a2a2a;
-      color: #eee;
-      text-decoration: none;
-      border-radius: 12px;
-      width: 200px;
       padding: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
-      transition: transform 0.3s;
     }
-    .icon-link:hover {
-      transform: translateY(-6px);
+    table {
+      width: 90%;
+      margin: 20px auto;
+      border-collapse: collapse;
+      font-size: 14px;
+    }
+    th, td {
+      border: 1px solid #555;
+      padding: 10px;
+    }
+    th {
+      background-color: #222;
       color: #d4af37;
     }
-    .icon-link i {
-      font-size: 32px;
-      margin-bottom: 10px;
+    h2 {
       color: #d4af37;
+      margin-top: 40px;
     }
   </style>
 </head>
@@ -99,25 +65,44 @@ header {
 </style>
 
   <header>
-    <h1>Paediatric Emergency Tools</h1>
-    <nav>
-      <a href="index.html">الرئيسية</a>
-      <a href="about.html">حول التطبيق</a>
-    </nav>
+    <h1>🧠 مقياس غلاسكو للغيبوبة (GCS)</h1>
   </header>
-
   <main>
-    <h2>مرحبًا</h2>
-    <p>This app is a fast access for pediatric emergency doctors.</p>
-    <h3 style="text-align: center; direction: rtl;">اختر أحد الأقسام للبدء:</h3>
+    <h2>GCS Scoring Table</h2>
+    <table>
+      <thead>
+        <tr><th>Category</th><th>Response</th><th>Score</th></tr>
+      </thead>
+      <tbody>
+        <tr><td rowspan="4">فتح العين (Eye)</td><td>تلقائي</td><td>4</td></tr>
+        <tr><td>عند النداء</td><td>3</td></tr>
+        <tr><td> عند الألم</td><td>2</td></tr>
+        <tr><td>لا يوجد استجابة </td><td>1</td></tr>
+        <tr><td rowspan="5">الاستجابة اللفظية (Verbal)</td><td>طبيعي</td><td>5</td></tr>
+        <tr><td>مشوش</td><td>4</td></tr>
+        <tr><td>كلمات غير مفهومة</td><td>3</td></tr>
+        <tr><td>أصوات فقط</td><td>2</td></tr>
+        <tr><td>لا يوجد</td><td>1</td></tr>
+        <tr><td rowspan="6">الاستجابة الحركية (Motor)</td><td>ينفذ الأوامر</td><td>6</td></tr>
+        <tr><td>يحدد مكان الألم</td><td>5</td></tr>
+        <tr><td>ينسحب من الألم</td><td>4</td></tr>
+        <tr><td>ثني غير طبيعي (Decorticate)</td><td>3</td></tr>
+        <tr><td>تمدد غير طبيعي (Decerebrate)</td><td>2</td></tr>
+        <tr><td>لا حركة</td><td>1</td></tr>
+      </tbody>
+    </table>
 
-    <div class="icon-nav">
-      <a class="icon-link" href="calculators.html"><i class="fas fa-calculator"></i><br>💧 Fluid Calculator</a>
-      <a class="icon-link" href="drugs.html"><i class="fas fa-pills"></i><br>💊 Emergency Drugs</a>
-      <a class="icon-link" href="algorithms.html"><i class="fas fa-project-diagram"></i><br>📊 Algorithms</a>
-      <a class="icon-link" href="critical.html"><i class="fas fa-heartbeat"></i><br>🚨 Critical Cases</a>
-      <a class="icon-link" href="gcs.html"><i class="fas fa-brain"></i><br>🧠 GCS</a>
-    </div>
+    <h2>Clinical Evaluation</h2>
+    <table>
+      <thead>
+        <tr><th>Total</th><th>Assessment</th></tr>
+      </thead>
+      <tbody>
+        <tr><td>13–15</td><td>Mild</td></tr>
+        <tr><td>9–12</td><td>Moderate</td></tr>
+        <tr><td>3–8</td><td>Severe</td></tr>
+      </tbody>
+    </table>
   </main>
 
 
