--- a/calculators.html
+++ b/calculators.html
@@ -45,7 +45,7 @@
     }
     .result-box {
       margin-top: 30px;
-      background-color: #1a1a1a;
+      background-color: #f9f9f9;
       border: 1px solid #444;
       border-radius: 12px;
       padding: 20px;
