--- a/calculators.html
+++ b/calculators.html
@@ -1,243 +1,135 @@
+
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Fluid Calculator</title>
   <style>
     body {
-      background-color: #111;
-      color: #fff;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f8fbff;
+      color: #222;
       margin: 0;
-      padding: 0;
+      padding: 20px;
+    }
+
+    header {
+      background-color: #0077b6;
+      color: white;
+      text-align: center;
+      padding: 1em;
+      font-size: 1.5em;
+    }
+
+    .container {
+      max-width: 600px;
+      margin: auto;
       text-align: center;
     }
-    header {
-      background-color: #000;
-      padding: 20px;
-      border-bottom: 1px solid #444;
-    }
-    header h1 {
-      color: #d4af37;
-      margin: 0;
-    }
-    main {
-      padding: 40px 20px;
-    }
-    input {
+
+    input[type="number"] {
       padding: 10px;
-      font-size: 18px;
-      border-radius: 8px;
-      border: none;
-      width: 200px;
-      background-color: #222;
-      color: #fff;
+      font-size: 1em;
+      width: 100px;
+      margin-bottom: 10px;
     }
+
     button {
-      background-color: #d4af37;
-      color: #000;
+      background-color: goldenrod;
+      color: black;
       padding: 10px 20px;
-      margin-top: 10px;
+      font-size: 1em;
       border: none;
-      border-radius: 8px;
+      border-radius: 5px;
       cursor: pointer;
-      font-size: 18px;
     }
-    .result-box {
-      margin-top: 30px;
-      background-color: #f9f9f9;
+
+    #result {
+      margin-top: 20px;
+      background-color: #fff;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    .dark-mode {
+      background-color: #111 !important;
+      color: #f1f1f1 !important;
+    }
+
+    .dark-mode header {
+      background-color: #000 !important;
+      color: #d4af37 !important;
+    }
+
+    .dark-mode #result {
+      background-color: #1a1a1a !important;
+      color: #f1f1f1 !important;
       border: 1px solid #444;
-      border-radius: 12px;
-      padding: 20px;
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
     }
-    p {
-      font-size: 18px;
-      line-height: 1.6;
+
+    .theme-toggle {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background: #0077b6;
+      color: white;
+      border: none;
+      border-radius: 20px;
+      padding: 10px 16px;
+      cursor: pointer;
+      font-size: 16px;
+      z-index: 9999;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
   </style>
 </head>
-
-<body style="font-family: 'Segoe UI', sans-serif; background-color: #f8fbff; color: #222;">
-<style>
-.card {
-    background-color: rgba(255, 255, 255, 0.85);
-    border: 1px solid #0077b6;
-    padding: 15px;
-    margin: 10px;
-    border-radius: 10px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-}
-header {
-    background-color: #0077b6;
-    color: white;
-    padding: 1em;
-    text-align: center;
-    font-size: 1.4em;
-}
-</style>
-
-  <header>
-    <h1>💧 Fluid Calculator</h1>
-  </header>
-  <main>
+<body>
+  <button class="theme-toggle" onclick="toggleTheme()">🌓</button>
+  <header>💧 Fluid Calculator</header>
+  <div class="container">
     <p>Enter patient weight (kg):</p>
-    <input type="number" id="weight" placeholder="e.g. 20" step="0.1">
-    <br>
+    <input type="number" id="weight" />
+    <br />
     <button onclick="calculateFluids()">Calculate</button>
 
-    <div class="result-box" id="results" style="display:none;">
-      <h2>Results</h2>
-      <p id="maintenance"></p>
-      <p id="bolus"></p>
-      <p id="deficit5"></p>
-      <p id="deficit7"></p>
-      <p id="deficit10"></p>
-    </div>
-  </main>
+    <div id="result"></div>
+  </div>
 
   <script>
+    function toggleTheme() {
+      document.body.classList.toggle('dark-mode');
+      localStorage.setItem('theme', document.body.classList.contains('dark-mode') ? 'dark' : 'light');
+    }
+
+    window.onload = function () {
+      if (localStorage.getItem('theme') === 'dark') {
+        document.body.classList.add('dark-mode');
+      }
+    };
+
     function calculateFluids() {
-      const weightInput = document.getElementById('weight').value;
-      const weight = parseFloat(weightInput);
-      if (!weight || weight <= 0) {
-        alert("Please enter a valid weight.");
+      var weight = parseFloat(document.getElementById("weight").value);
+      if (isNaN(weight) || weight <= 0) {
+        document.getElementById("result").innerHTML = "Please enter a valid weight.";
         return;
       }
 
-      let maintenance = 0;
-      if (weight <= 10) {
-        maintenance = weight * 100;
-      } else if (weight <= 20) {
-        maintenance = 1000 + (weight - 10) * 50;
-      } else {
-        maintenance = 1500 + (weight - 20) * 20;
-      }
-      const maintenanceHr = (maintenance / 24).toFixed(1);
+      var maintenance = weight * 1500;
+      var bolus = weight * 20;
+      var deficit5 = weight * 0.05 * 1000 / 24;
+      var deficit7 = weight * 0.07 * 1000 / 24;
+      var deficit10 = weight * 0.10 * 1000 / 24;
 
-      const bolus = (weight * 20).toFixed(1);
-      const deficit5 = ((weight * 0.05 * 1000) / 24).toFixed(1);
-      const deficit7 = ((weight * 0.07 * 1000) / 24).toFixed(1);
-      const deficit10 = ((weight * 0.10 * 1000) / 24).toFixed(1);
-
-      document.getElementById('maintenance').innerText = `Maintenance: ${maintenance.toFixed(1)} ml/day (${maintenanceHr} ml/hr)`;
-      document.getElementById('bolus').innerText = `Bolus (20 ml/kg): ${bolus} ml`;
-      document.getElementById('deficit5').innerText = `Deficit 5%: ${deficit5} ml/hr`;
-      document.getElementById('deficit7').innerText = `Deficit 7%: ${deficit7} ml/hr`;
-      document.getElementById('deficit10').innerText = `Deficit 10%: ${deficit10} ml/hr`;
-
-      document.getElementById('results').style.display = 'block';
+      document.getElementById("result").innerHTML =
+        "<h3>Results</h3>" +
+        "<p>Maintenance: " + maintenance.toFixed(1) + " ml/day</p>" +
+        "<p>Bolus (20 ml/kg): " + bolus.toFixed(1) + " ml</p>" +
+        "<p>Deficit 5%: " + deficit5.toFixed(1) + " ml/hr</p>" +
+        "<p>Deficit 7%: " + deficit7.toFixed(1) + " ml/hr</p>" +
+        "<p>Deficit 10%: " + deficit10.toFixed(1) + " ml/hr</p>";
     }
   </script>
-
-
-<style>
-  .theme-toggle {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    background: #0077b6;
-    color: white;
-    border: none;
-    border-radius: 20px;
-    padding: 10px 16px;
-    cursor: pointer;
-    font-size: 16px;
-    z-index: 9999;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-  }
-
-  .dark-mode {
-    background-color: #111 !important;
-    color: #f1f1f1 !important;
-  }
-
-  .dark-mode .card {
-    background-color: #1a1a1a !important;
-    color: #f1f1f1 !important;
-    border-color: #444 !important;
-  }
-
-  .dark-mode header {
-    background-color: #000 !important;
-    color: #d4af37 !important;
-  }
-
-  .dark-mode a {
-    color: #9dd9ff !important;
-  }
-</style>
-
-<script>
-  function toggleTheme() {
-    document.body.classList.toggle('dark-mode');
-    localStorage.setItem('theme', document.body.classList.contains('dark-mode') ? 'dark' : 'light');
-  }
-
-  window.onload = function() {
-    if (localStorage.getItem('theme') === 'dark') {
-      document.body.classList.add('dark-mode');
-    }
-  }
-</script>
-
-<button class="theme-toggle" onclick="toggleTheme()">🌓</button>
-
 </body>
-<style>
-  .theme-toggle {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    background: #0077b6;
-    color: white;
-    border: none;
-    border-radius: 20px;
-    padding: 10px 16px;
-    cursor: pointer;
-    font-size: 16px;
-    z-index: 9999;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-  }
-
-  .dark-mode {
-    background-color: #111 !important;
-    color: #f1f1f1 !important;
-  }
-
-  .dark-mode .card {
-    background-color: #1a1a1a !important;
-    color: #f1f1f1 !important;
-    border-color: #444 !important;
-  }
-
-  .dark-mode header {
-    background-color: #000 !important;
-    color: #d4af37 !important;
-  }
-
-  .dark-mode a {
-    color: #9dd9ff !important;
-  }
-</style>
-
-<script>
-  function toggleTheme() {
-    document.body.classList.toggle('dark-mode');
-    localStorage.setItem('theme', document.body.classList.contains('dark-mode') ? 'dark' : 'light');
-  }
-
-  window.onload = function() {
-    if (localStorage.getItem('theme') === 'dark') {
-      document.body.classList.add('dark-mode');
-    }
-  }
-</script>
-
-<button class="theme-toggle" onclick="toggleTheme()">🌓</button>
-
-</body>
-
 </html>
